fixed social medias alignment and some styling issues

--- a/src/style/desktop.css
+++ b/src/style/desktop.css
@@ -6,7 +6,7 @@
     margin-left: 5%;
     max-width: 100%;
     padding: 5% 1%;
-    margin-top:-50PX;
+    margin-top:-50px;
 }
 
 .blogContainer header {
@@ -404,13 +404,26 @@ footer {
 }
 
 @media only screen and (max-width: 1100px) {
+
+    .blogContainer {
+        margin-top:0px;
+    }
+    
     main {
-        width: 55%;
+        width: 80%;
         min-width: 55%;
     }
     
     aside {
-        width: 35% ;
+        width: 80% ;
+    }
+
+    #navbar div:nth-child(3){
+        flex: 0 0 30%;
+    }
+
+    #navbar div:nth-child(2) {
+        flex: 0 0 60%;
     }
 }
 
